--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "react-dropzone": "^14.4.0"
+    "react-dropzone": "^14.4.0",
+    "react-rnd": "^10.5.2"
   },
   "devDependencies": {
     "@types/node": "^20",
